parser.output
Terminals unused in grammar

   E_INVALIDCHAR


State 125 conflicts: 3 reduce/reduce
State 142 conflicts: 9 shift/reduce
State 143 conflicts: 9 shift/reduce
State 144 conflicts: 9 shift/reduce
State 145 conflicts: 9 shift/reduce
State 146 conflicts: 9 shift/reduce
State 147 conflicts: 9 shift/reduce
State 148 conflicts: 42 shift/reduce
State 149 conflicts: 42 shift/reduce
State 207 conflicts: 9 shift/reduce
State 208 conflicts: 1 shift/reduce
State 214 conflicts: 9 shift/reduce
State 215 conflicts: 9 shift/reduce
State 216 conflicts: 9 shift/reduce
State 217 conflicts: 9 shift/reduce
State 218 conflicts: 9 shift/reduce
State 219 conflicts: 9 shift/reduce
State 220 conflicts: 9 shift/reduce
State 221 conflicts: 9 shift/reduce
State 222 conflicts: 9 shift/reduce
State 223 conflicts: 9 shift/reduce
State 224 conflicts: 9 shift/reduce
State 225 conflicts: 9 shift/reduce
State 226 conflicts: 9 shift/reduce
State 227 conflicts: 9 shift/reduce
State 228 conflicts: 9 shift/reduce
State 229 conflicts: 9 shift/reduce
State 230 conflicts: 9 shift/reduce
State 231 conflicts: 9 shift/reduce
State 232 conflicts: 9 shift/reduce
State 233 conflicts: 9 shift/reduce
State 235 conflicts: 9 shift/reduce
State 236 conflicts: 9 shift/reduce
State 237 conflicts: 9 shift/reduce
State 238 conflicts: 9 shift/reduce
State 239 conflicts: 9 shift/reduce
State 240 conflicts: 9 shift/reduce
State 241 conflicts: 9 shift/reduce
State 242 conflicts: 9 shift/reduce
State 243 conflicts: 9 shift/reduce
State 244 conflicts: 9 shift/reduce
State 245 conflicts: 9 shift/reduce
State 246 conflicts: 9 shift/reduce
State 247 conflicts: 9 shift/reduce
State 248 conflicts: 9 shift/reduce
State 267 conflicts: 1 shift/reduce
State 273 conflicts: 1 shift/reduce
State 274 conflicts: 42 shift/reduce
State 275 conflicts: 1 shift/reduce


Grammar

    0 $accept: module $end

    1 module: module_name imports body_parts

    2 module_name: KWD_MODULE scoped_identifier P_SEMI

    3 imports: %empty
    4        | imports import

    5 import: KWD_USING scoped_identifier P_SEMI

    6 body_parts: %empty
    7           | body_parts body_part

    8 body_part: function
    9          | declaration

   10 declaration: function_declaration
   11            | variable_declaration
   12            | struct_declaration
   13            | typedef_declaration

   14 function_declaration: type T_ID P_LPAREN function_arg_list P_RPAREN P_SEMI

   15 variable_declaration: type T_ID variable_declaration_chain P_SEMI

   16 variable_declaration_chain: T_ID
   17                           | variable_declaration_chain P_COMMA T_ID

   18 struct_declaration: KWD_STRUCT T_ID P_LBRACE P_RBRACE struct_declaration_chain P_SEMI

   19 struct_declaration_chain: %empty
   20                         | struct_declaration_chain variable_declaration

   21 typedef_declaration: KWD_TYPEDEF type T_ID

   22 function: type T_ID P_LPAREN function_arg_list P_RPAREN compound_statement

   23 function_arg_list: %empty
   24                  | function_arg_list_nonempty

   25 function_arg_list_nonempty: type opt_id
   26                           | function_arg_list_nonempty P_COMMA type opt_id

   27 opt_id: %empty
   28       | T_ID

   29 statement: compound_statement
   30          | if_statement
   31          | while_statement
   32          | do_while_statement
   33          | for_statement
   34          | switch_statement
   35          | break_statement
   36          | continue_statement
   37          | return_statement
   38          | variable_declaration_statement
   39          | asm_statement
   40          | expression P_SEMI
   41          | P_SEMI

   42 compound_statement: P_LBRACE statements P_RBRACE

   43 statements: %empty
   44           | statements statement

   45 if_statement: KWD_IF P_LPAREN expression P_RPAREN statement maybe_else

   46 maybe_else: %empty
   47           | KWD_ELSE statement

   48 while_statement: KWD_WHILE P_LPAREN expression P_RPAREN statement

   49 do_while_statement: KWD_DO statement KWD_WHILE P_LPAREN statement P_RPAREN

   50 for_statement: KWD_FOR P_LPAREN for_init expression P_SEMI expression P_RPAREN statement

   51 for_init: variable_declaration_statement
   52         | expression P_SEMI

   53 switch_statement: KWD_SWITCH P_LPAREN expression P_RPAREN P_LBRACE switch_bodies P_RBRACE

   54 switch_bodies: %empty
   55              | switch_bodies switch_body

   56 switch_body: switch_case_body
   57            | switch_default_body

   58 switch_case_body: KWD_CASE L_INTLITERAL P_COLON compound_statement

   59 switch_default_body: KWD_DEFAULT P_COLON compound_statement

   60 break_statement: KWD_BREAK P_SEMI

   61 continue_statement: KWD_CONTINUE P_SEMI

   62 return_statement: KWD_RETURN opt_expression P_SEMI

   63 opt_expression: %empty
   64               | expression

   65 variable_declaration_statement: type T_ID variable_declaration_statement_chain P_SEMI

   66 variable_declaration_statement_chain: T_ID maybe_assign
   67                                     | variable_declaration_statement_chain P_COMMA T_ID maybe_assign

   68 maybe_assign: %empty
   69             | P_ASSIGN expression

   70 asm_statement: KWD_ASM L_STRINGLITERAL

   71 expression: scoped_identifier
   72           | L_INTLITERAL
   73           | L_FLOATLITERAL
   74           | L_STRINGLITERAL
   75           | L_CHARLITERAL
   76           | KWD_TRUE
   77           | KWD_FALSE
   78           | KWD_CAST P_LSQUARE type P_RSQUARE P_LPAREN expression P_RPAREN
   79           | KWD_SIZEOF P_LPAREN expression_or_type P_RPAREN
   80           | P_LPAREN expression P_RPAREN
   81           | expression P_DOT T_ID
   82           | expression P_ARROW T_ID
   83           | expression P_LPAREN function_call_arg_list P_RPAREN
   84           | expression P_LSQUARE expression P_RSQUARE
   85           | expression P_PLUSPLUS
   86           | expression P_MINUSMINUS
   87           | P_STAR expression
   88           | P_AMPERSAND expression
   89           | P_PLUSPLUS expression
   90           | P_MINUSMINUS expression
   91           | P_PLUS expression
   92           | P_MINUS expression
   93           | P_BANG expression
   94           | P_TILDE expression
   95           | expression P_STAR expression
   96           | expression P_SLASH expression
   97           | expression P_PERCENT expression
   98           | expression P_PLUS expression
   99           | expression P_MINUS expression
  100           | expression P_LSHIFT expression
  101           | expression P_LRSHIFT expression
  102           | expression P_ARSHIFT expression
  103           | expression P_SPACESHIP expression
  104           | expression P_LANGLE expression
  105           | expression P_RANGLE expression
  106           | expression P_LTEQ expression
  107           | expression P_GTEQ expression
  108           | expression P_EQ expression
  109           | expression P_NEQ expression
  110           | expression P_AMPERSAND expression
  111           | expression P_PIPE expression
  112           | expression P_CARET expression
  113           | expression P_LAND expression
  114           | expression P_LOR expression
  115           | expression P_QUESTION expression P_COLON expression
  116           | expression P_ASSIGN expression
  117           | expression P_MULASSIGN expression
  118           | expression P_DIVASSIGN expression
  119           | expression P_MODASSIGN expression
  120           | expression P_PLUSASSIGN expression
  121           | expression P_MINUSASSIGN expression
  122           | expression P_LSHIFTASSIGN expression
  123           | expression P_LRSHIFTASSIGN expression
  124           | expression P_ARSHIFTASSIGN expression
  125           | expression P_BITANDASSIGN expression
  126           | expression P_BITXORASSIGN expression
  127           | expression P_BITORASSIGN expression
  128           | expression P_LANDASSIGN expression
  129           | expression P_LORASSIGN expression
  130           | expression P_COMMA expression

  131 expression_or_type: expression
  132                   | type

  133 function_call_arg_list: %empty
  134                       | function_call_arg_list_nonempty

  135 function_call_arg_list_nonempty: expression
  136                                | function_call_arg_list_nonempty P_COMMA expression

  137 type: KWD_VOID
  138     | KWD_UBYTE
  139     | KWD_BYTE
  140     | KWD_UINT
  141     | KWD_INT
  142     | KWD_ULONG
  143     | KWD_LONG
  144     | KWD_FLOAT
  145     | KWD_DOUBLE
  146     | KWD_BOOL
  147     | scoped_identifier
  148     | type KWD_CONST
  149     | type P_LSQUARE L_INTLITERAL P_RSQUARE
  150     | type P_STAR
  151     | P_LPAREN P_STAR type P_RPAREN P_LPAREN function_ptr_arg_list P_RPAREN

  152 function_ptr_arg_list: %empty
  153                      | function_ptr_arg_list_nonempty

  154 function_ptr_arg_list_nonempty: type
  155                               | function_ptr_arg_list_nonempty P_COMMA type

  156 scoped_identifier: T_ID
  157                  | scoped_identifier P_COLONCOLON T_ID


Terminals, with rules where they appear

$end (0) 0
error (256)
KWD_MODULE <tokenID> (258) 2
KWD_USING <tokenID> (259) 5
KWD_STRUCT <tokenID> (260) 18
KWD_TYPEDEF <tokenID> (261) 21
KWD_IF <tokenID> (262) 45
KWD_ELSE <tokenID> (263) 47
KWD_WHILE <tokenID> (264) 48 49
KWD_DO <tokenID> (265) 49
KWD_FOR <tokenID> (266) 50
KWD_SWITCH <tokenID> (267) 53
KWD_CASE <tokenID> (268) 58
KWD_DEFAULT <tokenID> (269) 59
KWD_BREAK <tokenID> (270) 60
KWD_CONTINUE <tokenID> (271) 61
KWD_RETURN <tokenID> (272) 62
KWD_ASM <tokenID> (273) 70
KWD_SIZEOF <tokenID> (274) 79
KWD_VOID <tokenID> (275) 137
KWD_UBYTE <tokenID> (276) 138
KWD_BYTE <tokenID> (277) 139
KWD_UINT <tokenID> (278) 140
KWD_INT <tokenID> (279) 141
KWD_ULONG <tokenID> (280) 142
KWD_LONG <tokenID> (281) 143
KWD_FLOAT <tokenID> (282) 144
KWD_DOUBLE <tokenID> (283) 145
KWD_BOOL <tokenID> (284) 146
KWD_CONST <tokenID> (285) 148
KWD_TRUE <tokenID> (286) 76
KWD_FALSE <tokenID> (287) 77
KWD_CAST <tokenID> (288) 78
P_SEMI <tokenID> (289) 2 5 14 15 18 40 41 50 52 60 61 62 65
P_COMMA <tokenID> (290) 17 26 67 130 136 155
P_LPAREN <tokenID> (291) 14 22 45 48 49 50 53 78 79 80 83 151
P_RPAREN <tokenID> (292) 14 22 45 48 49 50 53 78 79 80 83 151
P_LSQUARE <tokenID> (293) 78 84 149
P_RSQUARE <tokenID> (294) 78 84 149
P_LBRACE <tokenID> (295) 18 42 53
P_RBRACE <tokenID> (296) 18 42 53
P_DOT <tokenID> (297) 81
P_ARROW <tokenID> (298) 82
P_PLUSPLUS <tokenID> (299) 85 89
P_MINUSMINUS <tokenID> (300) 86 90
P_STAR <tokenID> (301) 87 95 150 151
P_AMPERSAND <tokenID> (302) 88 110
P_PLUS <tokenID> (303) 91 98
P_MINUS <tokenID> (304) 92 99
P_BANG <tokenID> (305) 93
P_TILDE <tokenID> (306) 94
P_SLASH <tokenID> (307) 96
P_PERCENT <tokenID> (308) 97
P_LSHIFT <tokenID> (309) 100
P_LRSHIFT <tokenID> (310) 101
P_ARSHIFT <tokenID> (311) 102
P_SPACESHIP <tokenID> (312) 103
P_LANGLE <tokenID> (313) 104
P_RANGLE <tokenID> (314) 105
P_LTEQ <tokenID> (315) 106
P_GTEQ <tokenID> (316) 107
P_EQ <tokenID> (317) 108
P_NEQ <tokenID> (318) 109
P_PIPE <tokenID> (319) 111
P_CARET <tokenID> (320) 112
P_LAND <tokenID> (321) 113
P_LOR <tokenID> (322) 114
P_QUESTION <tokenID> (323) 115
P_COLON <tokenID> (324) 58 59 115
P_ASSIGN <tokenID> (325) 69 116
P_MULASSIGN <tokenID> (326) 117
P_DIVASSIGN <tokenID> (327) 118
P_MODASSIGN <tokenID> (328) 119
P_PLUSASSIGN <tokenID> (329) 120
P_MINUSASSIGN <tokenID> (330) 121
P_LSHIFTASSIGN <tokenID> (331) 122
P_LRSHIFTASSIGN <tokenID> (332) 123
P_ARSHIFTASSIGN <tokenID> (333) 124
P_BITANDASSIGN <tokenID> (334) 125
P_BITXORASSIGN <tokenID> (335) 126
P_BITORASSIGN <tokenID> (336) 127
P_LANDASSIGN <tokenID> (337) 128
P_LORASSIGN <tokenID> (338) 129
P_COLONCOLON <tokenID> (339) 157
T_ID <tokenString> (340) 14 15 16 17 18 21 22 28 65 66 67 81 82 156
    157
L_STRINGLITERAL <tokenString> (341) 70 74
L_CHARLITERAL <tokenString> (342) 75
L_INTLITERAL <tokenString> (343) 58 72 149
L_FLOATLITERAL <tokenString> (344) 73
E_INVALIDCHAR <invalidChar> (345)
O_FNCALL (346)
O_ARRAYACCESS (347)
O_POSTINC (348)
O_POSTDEC (349)
O_DEREF (350)
O_ADDROF (351)
O_PREINC (352)
O_PREDEC (353)
O_UNARYPLUS (354)
O_UNARYMINUS (355)
O_MUL (356)
O_ADD (357)
O_SUB (358)
O_BITAND (359)
O_FNCALLARG (360)
O_SEQ (361)


Nonterminals, with rules where they appear

$accept (107)
    on left: 0
module (108)
    on left: 1, on right: 0
module_name (109)
    on left: 2, on right: 1
imports (110)
    on left: 3 4, on right: 1 4
import (111)
    on left: 5, on right: 4
body_parts (112)
    on left: 6 7, on right: 1 7
body_part (113)
    on left: 8 9, on right: 7
declaration (114)
    on left: 10 11 12 13, on right: 9
function_declaration (115)
    on left: 14, on right: 10
variable_declaration (116)
    on left: 15, on right: 11 20
variable_declaration_chain (117)
    on left: 16 17, on right: 15 17
struct_declaration (118)
    on left: 18, on right: 12
struct_declaration_chain (119)
    on left: 19 20, on right: 18 20
typedef_declaration (120)
    on left: 21, on right: 13
function (121)
    on left: 22, on right: 8
function_arg_list (122)
    on left: 23 24, on right: 14 22
function_arg_list_nonempty (123)
    on left: 25 26, on right: 24 26
opt_id (124)
    on left: 27 28, on right: 25 26
statement (125)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41, on right: 44 45
    47 48 49 50
compound_statement (126)
    on left: 42, on right: 22 29 58 59
statements (127)
    on left: 43 44, on right: 42 44
if_statement (128)
    on left: 45, on right: 30
maybe_else (129)
    on left: 46 47, on right: 45
while_statement (130)
    on left: 48, on right: 31
do_while_statement (131)
    on left: 49, on right: 32
for_statement (132)
    on left: 50, on right: 33
for_init (133)
    on left: 51 52, on right: 50
switch_statement (134)
    on left: 53, on right: 34
switch_bodies (135)
    on left: 54 55, on right: 53 55
switch_body (136)
    on left: 56 57, on right: 55
switch_case_body (137)
    on left: 58, on right: 56
switch_default_body (138)
    on left: 59, on right: 57
break_statement (139)
    on left: 60, on right: 35
continue_statement (140)
    on left: 61, on right: 36
return_statement (141)
    on left: 62, on right: 37
opt_expression (142)
    on left: 63 64, on right: 62
variable_declaration_statement (143)
    on left: 65, on right: 38 51
variable_declaration_statement_chain (144)
    on left: 66 67, on right: 65 67
maybe_assign (145)
    on left: 68 69, on right: 66 67
asm_statement (146)
    on left: 70, on right: 39
expression (147)
    on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
    89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
    108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123
    124 125 126 127 128 129 130, on right: 40 45 48 50 52 53 64 69
    78 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99
    100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115
    116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131
    135 136
expression_or_type (148)
    on left: 131 132, on right: 79
function_call_arg_list (149)
    on left: 133 134, on right: 83
function_call_arg_list_nonempty (150)
    on left: 135 136, on right: 134 136
type (151)
    on left: 137 138 139 140 141 142 143 144 145 146 147 148 149 150
    151, on right: 14 15 21 22 25 26 65 78 132 148 149 150 151 154
    155
function_ptr_arg_list (152)
    on left: 152 153, on right: 151
function_ptr_arg_list_nonempty (153)
    on left: 154 155, on right: 153 155
scoped_identifier (154)
    on left: 156 157, on right: 2 5 71 147 157


State 0

    0 $accept: . module $end

    KWD_MODULE  shift, and go to state 1

    module       go to state 2
    module_name  go to state 3


State 1

    2 module_name: KWD_MODULE . scoped_identifier P_SEMI

    T_ID  shift, and go to state 4

    scoped_identifier  go to state 5


State 2

    0 $accept: module . $end

    $end  shift, and go to state 6


State 3

    1 module: module_name . imports body_parts

    $default  reduce using rule 3 (imports)

    imports  go to state 7


State 4

  156 scoped_identifier: T_ID .

    $default  reduce using rule 156 (scoped_identifier)


State 5

    2 module_name: KWD_MODULE scoped_identifier . P_SEMI
  157 scoped_identifier: scoped_identifier . P_COLONCOLON T_ID

    P_SEMI        shift, and go to state 8
    P_COLONCOLON  shift, and go to state 9


State 6

    0 $accept: module $end .

    $default  accept


State 7

    1 module: module_name imports . body_parts
    4 imports: imports . import

    KWD_USING  shift, and go to state 10

    $default  reduce using rule 6 (body_parts)

    import      go to state 11
    body_parts  go to state 12


State 8

    2 module_name: KWD_MODULE scoped_identifier P_SEMI .

    $default  reduce using rule 2 (module_name)


State 9

  157 scoped_identifier: scoped_identifier P_COLONCOLON . T_ID

    T_ID  shift, and go to state 13


State 10

    5 import: KWD_USING . scoped_identifier P_SEMI

    T_ID  shift, and go to state 4

    scoped_identifier  go to state 14


State 11

    4 imports: imports import .

    $default  reduce using rule 4 (imports)


State 12

    1 module: module_name imports body_parts .
    7 body_parts: body_parts . body_part

    KWD_STRUCT   shift, and go to state 15
    KWD_TYPEDEF  shift, and go to state 16
    KWD_VOID     shift, and go to state 17
    KWD_UBYTE    shift, and go to state 18
    KWD_BYTE     shift, and go to state 19
    KWD_UINT     shift, and go to state 20
    KWD_INT      shift, and go to state 21
    KWD_ULONG    shift, and go to state 22
    KWD_LONG     shift, and go to state 23
    KWD_FLOAT    shift, and go to state 24
    KWD_DOUBLE   shift, and go to state 25
    KWD_BOOL     shift, and go to state 26
    P_LPAREN     shift, and go to state 27
    T_ID         shift, and go to state 4

    $default  reduce using rule 1 (module)

    body_part             go to state 28
    declaration           go to state 29
    function_declaration  go to state 30
    variable_declaration  go to state 31
    struct_declaration    go to state 32
    typedef_declaration   go to state 33
    function              go to state 34
    type                  go to state 35
    scoped_identifier     go to state 36


State 13

  157 scoped_identifier: scoped_identifier P_COLONCOLON T_ID .

    $default  reduce using rule 157 (scoped_identifier)


State 14

    5 import: KWD_USING scoped_identifier . P_SEMI
  157 scoped_identifier: scoped_identifier . P_COLONCOLON T_ID

    P_SEMI        shift, and go to state 37
    P_COLONCOLON  shift, and go to state 9


State 15

   18 struct_declaration: KWD_STRUCT . T_ID P_LBRACE P_RBRACE struct_declaration_chain P_SEMI

    T_ID  shift, and go to state 38


State 16

   21 typedef_declaration: KWD_TYPEDEF . type T_ID

    KWD_VOID    shift, and go to state 17
    KWD_UBYTE   shift, and go to state 18
    KWD_BYTE    shift, and go to state 19
    KWD_UINT    shift, and go to state 20
    KWD_INT     shift, and go to state 21
    KWD_ULONG   shift, and go to state 22
    KWD_LONG    shift, and go to state 23
    KWD_FLOAT   shift, and go to state 24
    KWD_DOUBLE  shift, and go to state 25
    KWD_BOOL    shift, and go to state 26
    P_LPAREN    shift, and go to state 27
    T_ID        shift, and go to state 4

    type               go to state 39
    scoped_identifier  go to state 36


State 17

  137 type: KWD_VOID .

    $default  reduce using rule 137 (type)


State 18

  138 type: KWD_UBYTE .

    $default  reduce using rule 138 (type)


State 19

  139 type: KWD_BYTE .

    $default  reduce using rule 139 (type)


State 20

  140 type: KWD_UINT .

    $default  reduce using rule 140 (type)


State 21

  141 type: KWD_INT .

    $default  reduce using rule 141 (type)


State 22

  142 type: KWD_ULONG .

    $default  reduce using rule 142 (type)


State 23

  143 type: KWD_LONG .

    $default  reduce using rule 143 (type)


State 24

  144 type: KWD_FLOAT .

    $default  reduce using rule 144 (type)


State 25

  145 type: KWD_DOUBLE .

    $default  reduce using rule 145 (type)


State 26

  146 type: KWD_BOOL .

    $default  reduce using rule 146 (type)


State 27

  151 type: P_LPAREN . P_STAR type P_RPAREN P_LPAREN function_ptr_arg_list P_RPAREN

    P_STAR  shift, and go to state 40


State 28

    7 body_parts: body_parts body_part .

    $default  reduce using rule 7 (body_parts)


State 29

    9 body_part: declaration .

    $default  reduce using rule 9 (body_part)


State 30

   10 declaration: function_declaration .

    $default  reduce using rule 10 (declaration)


State 31

   11 declaration: variable_declaration .

    $default  reduce using rule 11 (declaration)


State 32

   12 declaration: struct_declaration .

    $default  reduce using rule 12 (declaration)


State 33

   13 declaration: typedef_declaration .

    $default  reduce using rule 13 (declaration)


State 34

    8 body_part: function .

    $default  reduce using rule 8 (body_part)


State 35

   14 function_declaration: type . T_ID P_LPAREN function_arg_list P_RPAREN P_SEMI
   15 variable_declaration: type . T_ID variable_declaration_chain P_SEMI
   22 function: type . T_ID P_LPAREN function_arg_list P_RPAREN compound_statement
  148 type: type . KWD_CONST
  149     | type . P_LSQUARE L_INTLITERAL P_RSQUARE
  150     | type . P_STAR

    KWD_CONST  shift, and go to state 41
    P_LSQUARE  shift, and go to state 42
    P_STAR     shift, and go to state 43
    T_ID       shift, and go to state 44


State 36

  147 type: scoped_identifier .
  157 scoped_identifier: scoped_identifier . P_COLONCOLON T_ID

    P_COLONCOLON  shift, and go to state 9

    $default  reduce using rule 147 (type)


State 37

    5 import: KWD_USING scoped_identifier P_SEMI .

    $default  reduce using rule 5 (import)


State 38

   18 struct_declaration: KWD_STRUCT T_ID . P_LBRACE P_RBRACE struct_declaration_chain P_SEMI

    P_LBRACE  shift, and go to state 45


State 39

   21 typedef_declaration: KWD_TYPEDEF type . T_ID
  148 type: type . KWD_CONST
  149     | type . P_LSQUARE L_INTLITERAL P_RSQUARE
  150     | type . P_STAR

    KWD_CONST  shift, and go to state 41
    P_LSQUARE  shift, and go to state 42
    P_STAR     shift, and go to state 43
    T_ID       shift, and go to state 46


State 40

  151 type: P_LPAREN P_STAR . type P_RPAREN P_LPAREN function_ptr_arg_list P_RPAREN

    KWD_VOID    shift, and go to state 17
    KWD_UBYTE   shift, and go to state 18
    KWD_BYTE    shift, and go to state 19
    KWD_UINT    shift, and go to state 20
    KWD_INT     shift, and go to state 21
    KWD_ULONG   shift, and go to state 22
    KWD_LONG    shift, and go to state 23
    KWD_FLOAT   shift, and go to state 24
    KWD_DOUBLE  shift, and go to state 25
    KWD_BOOL    shift, and go to state 26
    P_LPAREN    shift, and go to state 27
    T_ID        shift, and go to state 4

    type               go to state 47
    scoped_identifier  go to state 36


State 41

  148 type: type KWD_CONST .

    $default  reduce using rule 148 (type)


State 42

  149 type: type P_LSQUARE . L_INTLITERAL P_RSQUARE

    L_INTLITERAL  shift, and go to state 48


State 43

  150 type: type P_STAR .

    $default  reduce using rule 150 (type)


State 44

   14 function_declaration: type T_ID . P_LPAREN function_arg_list P_RPAREN P_SEMI
   15 variable_declaration: type T_ID . variable_declaration_chain P_SEMI
   22 function: type T_ID . P_LPAREN function_arg_list P_RPAREN compound_statement

    P_LPAREN  shift, and go to state 49
    T_ID      shift, and go to state 50

    variable_declaration_chain  go to state 51


State 45

   18 struct_declaration: KWD_STRUCT T_ID P_LBRACE . P_RBRACE struct_declaration_chain P_SEMI

    P_RBRACE  shift, and go to state 52


State 46

   21 typedef_declaration: KWD_TYPEDEF type T_ID .

    $default  reduce using rule 21 (typedef_declaration)


State 47

  148 type: type . KWD_CONST
  149     | type . P_LSQUARE L_INTLITERAL P_RSQUARE
  150     | type . P_STAR
  151     | P_LPAREN P_STAR type . P_RPAREN P_LPAREN function_ptr_arg_list P_RPAREN

    KWD_CONST  shift, and go to state 41
    P_RPAREN   shift, and go to state 53
    P_LSQUARE  shift, and go to state 42
    P_STAR     shift, and go to state 43


State 48

  149 type: type P_LSQUARE L_INTLITERAL . P_RSQUARE

    P_RSQUARE  shift, and go to state 54


State 49

   14 function_declaration: type T_ID P_LPAREN . function_arg_list P_RPAREN P_SEMI
   22 function: type T_ID P_LPAREN . function_arg_list P_RPAREN compound_statement

    KWD_VOID    shift, and go to state 17
    KWD_UBYTE   shift, and go to state 18
    KWD_BYTE    shift, and go to state 19
    KWD_UINT    shift, and go to state 20
    KWD_INT     shift, and go to state 21
    KWD_ULONG   shift, and go to state 22
    KWD_LONG    shift, and go to state 23
    KWD_FLOAT   shift, and go to state 24
    KWD_DOUBLE  shift, and go to state 25
    KWD_BOOL    shift, and go to state 26
    P_LPAREN    shift, and go to state 27
    T_ID        shift, and go to state 4

    $default  reduce using rule 23 (function_arg_list)

    function_arg_list           go to state 55
    function_arg_list_nonempty  go to state 56
    type                        go to state 57
    scoped_identifier           go to state 36


State 50

   16 variable_declaration_chain: T_ID .

    $default  reduce using rule 16 (variable_declaration_chain)


State 51

   15 variable_declaration: type T_ID variable_declaration_chain . P_SEMI
   17 variable_declaration_chain: variable_declaration_chain . P_COMMA T_ID

    P_SEMI   shift, and go to state 58
    P_COMMA  shift, and go to state 59


State 52

   18 struct_declaration: KWD_STRUCT T_ID P_LBRACE P_RBRACE . struct_declaration_chain P_SEMI

    $default  reduce using rule 19 (struct_declaration_chain)

    struct_declaration_chain  go to state 60


State 53

  151 type: P_LPAREN P_STAR type P_RPAREN . P_LPAREN function_ptr_arg_list P_RPAREN

    P_LPAREN  shift, and go to state 61


State 54

  149 type: type P_LSQUARE L_INTLITERAL P_RSQUARE .

    $default  reduce using rule 149 (type)


State 55

   14 function_declaration: type T_ID P_LPAREN function_arg_list . P_RPAREN P_SEMI
   22 function: type T_ID P_LPAREN function_arg_list . P_RPAREN compound_statement

    P_RPAREN  shift, and go to state 62


State 56

   24 function_arg_list: function_arg_list_nonempty .
   26 function_arg_list_nonempty: function_arg_list_nonempty . P_COMMA type opt_id

    P_COMMA  shift, and go to state 63

    $default  reduce using rule 24 (function_arg_list)


State 57

   25 function_arg_list_nonempty: type . opt_id
  148 type: type . KWD_CONST
  149     | type . P_LSQUARE L_INTLITERAL P_RSQUARE
  150     | type . P_STAR

    KWD_CONST  shift, and go to state 41
    P_LSQUARE  shift, and go to state 42
    P_STAR     shift, and go to state 43
    T_ID       shift, and go to state 64

    $default  reduce using rule 27 (opt_id)

    opt_id  go to state 65


State 58

   15 variable_declaration: type T_ID variable_declaration_chain P_SEMI .

    $default  reduce using rule 15 (variable_declaration)


State 59

   17 variable_declaration_chain: variable_declaration_chain P_COMMA . T_ID

    T_ID  shift, and go to state 66


State 60

   18 struct_declaration: KWD_STRUCT T_ID P_LBRACE P_RBRACE struct_declaration_chain . P_SEMI
   20 struct_declaration_chain: struct_declaration_chain . variable_declaration

    KWD_VOID    shift, and go to state 17
    KWD_UBYTE   shift, and go to state 18
    KWD_BYTE    shift, and go to state 19
    KWD_UINT    shift, and go to state 20
    KWD_INT     shift, and go to state 21
    KWD_ULONG   shift, and go to state 22
    KWD_LONG    shift, and go to state 23
    KWD_FLOAT   shift, and go to state 24
    KWD_DOUBLE  shift, and go to state 25
    KWD_BOOL    shift, and go to state 26
    P_SEMI      shift, and go to state 67
    P_LPAREN    shift, and go to state 27
    T_ID        shift, and go to state 4

    variable_declaration  go to state 68
    type                  go to state 69
    scoped_identifier     go to state 36


State 61

  151 type: P_LPAREN P_STAR type P_RPAREN P_LPAREN . function_ptr_arg_list P_RPAREN

    KWD_VOID    shift, and go to state 17
    KWD_UBYTE   shift, and go to state 18
    KWD_BYTE    shift, and go to state 19
    KWD_UINT    shift, and go to state 20
    KWD_INT     shift, and go to state 21
    KWD_ULONG   shift, and go to state 22
    KWD_LONG    shift, and go to state 23
    KWD_FLOAT   shift, and go to state 24
    KWD_DOUBLE  shift, and go to state 25
    KWD_BOOL    shift, and go to state 26
    P_LPAREN    shift, and go to state 27
    T_ID        shift, and go to state 4

    $default  reduce using rule 152 (function_ptr_arg_list)

    type                            go to state 70
    function_ptr_arg_list           go to state 71
    function_ptr_arg_list_nonempty  go to state 72
    scoped_identifier               go to state 36


State 62

   14 function_declaration: type T_ID P_LPAREN function_arg_list P_RPAREN . P_SEMI
   22 function: type T_ID P_LPAREN function_arg_list P_RPAREN . compound_statement

    P_SEMI    shift, and go to state 73
    P_LBRACE  shift, and go to state 74

    compound_statement  go to state 75


State 63

   26 function_arg_list_nonempty: function_arg_list_nonempty P_COMMA . type opt_id

    KWD_VOID    shift, and go to state 17
    KWD_UBYTE   shift, and go to state 18
    KWD_BYTE    shift, and go to state 19
    KWD_UINT    shift, and go to state 20
    KWD_INT     shift, and go to state 21
    KWD_ULONG   shift, and go to state 22
    KWD_LONG    shift, and go to state 23
    KWD_FLOAT   shift, and go to state 24
    KWD_DOUBLE  shift, and go to state 25
    KWD_BOOL    shift, and go to state 26
    P_LPAREN    shift, and go to state 27
    T_ID        shift, and go to state 4

    type               go to state 76
    scoped_identifier  go to state 36


State 64

   28 opt_id: T_ID .

    $default  reduce using rule 28 (opt_id)


State 65

   25 function_arg_list_nonempty: type opt_id .

    $default  reduce using rule 25 (function_arg_list_nonempty)


State 66

   17 variable_declaration_chain: variable_declaration_chain P_COMMA T_ID .

    $default  reduce using rule 17 (variable_declaration_chain)


State 67

   18 struct_declaration: KWD_STRUCT T_ID P_LBRACE P_RBRACE struct_declaration_chain P_SEMI .

    $default  reduce using rule 18 (struct_declaration)


State 68

   20 struct_declaration_chain: struct_declaration_chain variable_declaration .

    $default  reduce using rule 20 (struct_declaration_chain)


State 69

   15 variable_declaration: type . T_ID variable_declaration_chain P_SEMI
  148 type: type . KWD_CONST
  149     | type . P_LSQUARE L_INTLITERAL P_RSQUARE
  150     | type . P_STAR

    KWD_CONST  shift, and go to state 41
    P_LSQUARE  shift, and go to state 42
    P_STAR     shift, and go to state 43
    T_ID       shift, and go to state 77


State 70

  148 type: type . KWD_CONST
  149     | type . P_LSQUARE L_INTLITERAL P_RSQUARE
  150     | type . P_STAR
  154 function_ptr_arg_list_nonempty: type .

    KWD_CONST  shift, and go to state 41
    P_LSQUARE  shift, and go to state 42
    P_STAR     shift, and go to state 43

    $default  reduce using rule 154 (function_ptr_arg_list_nonempty)


State 71

  151 type: P_LPAREN P_STAR type P_RPAREN P_LPAREN function_ptr_arg_list . P_RPAREN

    P_RPAREN  shift, and go to state 78


State 72
